<resources>
    <string name="server_ip_qqtech">eco.lingzhuyun.com</string>
    <string name="server_port_qqtech">8092</string>

    <string name="app_name">微聊</string>
    <string name="empty"></string>
    <string name="message_toolbar_change">信息</string>
    <string name="quit">再按一次退出程序</string>
    <string name="person_introduce">个人简介</string>
    <string name="cost_query">缴费查询</string>
    <string name="invite_friend">邀请朋友</string>
    <string name="complain_advise">投诉建议</string>
    <string name="achieve_data">完善资料</string>
    <string name="actual_identification">实名认证</string>
    <string name="achievedata_icon">头像</string>
    <string name="achievedata_unit_name">单位名称</string>
    <string name="achievedata_unit_work">单位职务</string>
    <string name="achievedata_unit_address">单位详细地址</string>
    <string name="achievedata_email">邮箱</string>
    <string name="hint_achievedata_unit_name">请输入单位名称</string>
    <string name="hint_achievedata_unit_work">请输入单位职务</string>
    <string name="hint_achievedata_unit_address_email">请输入</string>
    <string name="button_achievedata">提交</string>
    <string name="hint_person_introduce">用一段话介绍自己...</string>
    <string name="show_person_introduce_honour">上限了...</string>
    <string name="person_honour">个人荣誉</string>
    <string name="hint_person_honour">获得过哪些荣誉...</string>
    <string name="person_photo">个人照片</string>

    <!-- 缴费查询Top -->
    <string name="mine_cost_query_days">7天内</string>
    <string name="mine_cost_query_month">1个月</string>
    <string name="mine_cost_query_months">3个月</string>
    <string name="mine_cost_query_year">1年</string>

    <string name="mine_btn_achieve_data_dialog_back">上传中...</string>
    <string name="login_input_account">请输入账号</string>
    <string name="login_input_password">请输入密码</string>
    <string name="register_input_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_input_name">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_input_password">6位以上,数字字母组合,含有大小写字母</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="logining">登录中\u2026</string>
    <string name="msg_broadcast">工作通知小秘书</string>
    <string name="notice_broadcast">公告</string>
    <string name="login_account_not">账号不存在</string>
    <string name="login_password_error">密码错误</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="registering">注册中\u2026</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="done">完成</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="login_hint_phone">请输手机号</string>
    <string name="login_hint_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="login_by_account">账号密码登录</string>
    <string name="verify_code_error">验证码错误</string>
    <string name="login_failed_account_or_verify_code_error">帐号或验证码错误</string>
    <string name="user_bind_phone">绑定手机号码</string>
    <string name="user_bind_text_current_phone">当前手机号</string>
    <string name="user_bind_text_current_phone_number">13177778888</string>
    <string name="user_bind_text_hint_first">此手机号将显示在个人信息中，</string>
    <string name="user_bind_text_hint_second">你也可以使用此手机号登录。</string>
    <string name="user_change_phone">更换手机号</string>
    <string name="user_change_phone_text_verify_identity">身份验证</string>
    <string name="user_change_phone_hint_first">你正在修改登录手机号，请先完成身份验证。验证码已发送</string>
    <string name="user_change_phone_hint_second">至：</string>
    <string name="user_change_phone_current_phone">+8613177778888</string>
    <string name="user_change_phone_countdown">60</string>
    <string name="user_change_phone_hint_countdown">秒后重新发送验证码</string>
    <string name="user_change_phone_hint_third">手机号已停用？</string>
    <string name="user_change_phone_retrieve">找回账号</string>
    <string name="user_alter_phone">修改登录手机号</string>
    <string name="user_alter_phone_hint_first">你正在修改登录手机号，请输入新手机号完成修改</string>
    <string name="user_alter_phone_hint_second">当前手机号：</string>
    <string name="user_alter_phone_hint_third">+ 86</string>
    <string name="user_alter_phone_edit_hint">请输入你的手机号</string>
    <string name="user_alter_phone_hint_forth">登录手机号码修改后，原手机号将无法用于登录。</string>
    <string name="user_alert_phone_confirm_alert">确认修改</string>
    <string name="user_identity_verify_getverify_again">重新获取验证码</string>
    <string name="user_identity_verify_hint_first">验证码已发送至：</string>
</resources>