<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            app:titleTextAppearance="@style/Toolbar.TitleText" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_change_phone"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/color_black_333333"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/user_alter_phone"
            android:textSize="@dimen/text_size_24"
            android:textColor="@color/color_black_333333"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/user_alter_phone_hint_first"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/color_grey_999999" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_alter_phone_hint_second"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_grey_999999" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_alter_phone_hint_third"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_black_333333"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_change_current_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_bind_text_current_phone_number"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_black_333333"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/edit_verify_selector"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_16"

                android:text="@string/user_alter_phone_hint_third"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/color_black_333333" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_gravity="center"
                android:background="@color/color_gray_D8D8D8" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_gravity="center"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/color_black_333333"
                android:textSize="@dimen/text_size_16"
                android:hint="@string/user_alter_phone_edit_hint"
                android:textColorHint="@color/color_split_line_cccccc"
                android:textCursorDrawable="@drawable/my_cursor" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/user_alter_phone_hint_forth"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/color_grey_999999" />

        <Button
            android:id="@+id/btn_confirm_alert"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_96"
            android:background="@drawable/shape_btn_4876f9_22"
            android:text="@string/user_alert_phone_confirm_alert"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle" />

    </LinearLayout>

</LinearLayout>