<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_alter_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/user_alter_phone"
        android:textColor="@color/color_black_333333"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/user_alter_phone_hint_first"
        android:textColor="@color/color_grey_999999"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_alter_phone_hint_second"
            android:textColor="@color/color_grey_999999"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_phone_num_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black_333333"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/selector_bg_verify_code"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/user_alter_phone_hint_third"
            android:textColor="@color/color_black_333333"
            android:textSize="@dimen/text_size_16" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@color/color_gray_D8D8D8" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@null"
            android:digits="0123456789"
            android:gravity="left|center_vertical"
            android:hint="@string/user_alter_phone_edit_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/color_black_333333"
            android:textColorHint="@color/color_grey_999999"
            android:textCursorDrawable="@drawable/my_cursor"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/user_alter_phone_hint_forth"
        android:textColor="@color/color_grey_999999"
        android:textSize="@dimen/text_size_14" />

    <Button
        android:id="@+id/btn_confirm_alert"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_96"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/shape_btn_4876f9_22"
        android:enabled="false"
        android:text="@string/user_alert_phone_confirm_alert"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />

</LinearLayout>
