<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            app:titleTextAppearance="@style/Toolbar.TitleText" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_bind_phone"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/color_black_333333"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_gravity="center"
            android:background="@mipmap/ic_phone_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center_horizontal"
            android:text="@string/user_bind_text_current_phone"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/color_grey_999999" />

        <TextView
            android:id="@+id/tv_current_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center_horizontal"
            android:text="@string/user_bind_text_current_phone_number"
            android:textSize="@dimen/text_size_24"
            android:textColor="@color/color_black_333333"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_bind_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/shape_btn_4876f9_22"
            android:text="@string/user_change_phone"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_bind_text_hint_first"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_grey_999999" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_bind_text_hint_second"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_grey_999999" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>