<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            app:titleTextAppearance="@style/Toolbar.TitleText" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_change_phone"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/color_black_333333"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/user_change_phone_text_verify_identity"
            android:textSize="@dimen/text_size_24"
            android:textColor="@color/color_black_333333"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_change_phone_hint_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_12" 
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_change_phone_hint_first"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_grey_999999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_change_phone_hint_second"
                    android:textSize="@dimen/text_size_14"
                    android:textColor="@color/color_grey_999999" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_alter_phone_hint_third"
                    android:textSize="@dimen/text_size_14"
                    android:textColor="@color/color_black_333333"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_phone_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_bind_text_current_phone_number"
                    android:textSize="@dimen/text_size_14"
                    android:textColor="@color/color_black_333333"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_change_phone_hint_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_identity_verify_hint_first"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_grey_999999" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_alter_phone_hint_third"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_black_333333"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_alter_new_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_bind_text_current_phone_number"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_black_333333"
                android:textStyle="bold" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_first_num"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:background="@drawable/edit_verify_selector"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textSize="@dimen/text_size_24"
                android:textColor="@color/color_black_333333" />

            <EditText
                android:id="@+id/et_second_num"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/edit_verify_selector"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textSize="@dimen/text_size_24"
                android:textColor="@color/color_black_333333" />

            <EditText
                android:id="@+id/et_third_num"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/edit_verify_selector"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textSize="@dimen/text_size_24"
                android:textColor="@color/color_black_333333" />

            <EditText
                android:id="@+id/et_fourth_num"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/edit_verify_selector"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/my_cursor"
                android:textSize="@dimen/text_size_24"
                android:textColor="@color/color_black_333333" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_countdown_sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_change_phone_countdown"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_grey_999999" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_change_phone_hint_countdown"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_grey_999999" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_get_verify_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/user_identity_verify_getverify_again"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/main_color_4876F9" 
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_retrieve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_change_phone_hint_third"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/color_gray_666666" />

            <TextView
                android:id="@+id/tv_retrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_change_phone_retrieve"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/main_color_4876F9" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>